<resources>
    <string name="app_name">MeroPasal</string>
    <string name="Home">Home</string>
    <string name="Product">Product</string>
    <string name="UpdateProduct"> Update Product</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="Profile">Profile</string>
    <string name="Order">Order</string>
    <string name="Customer">Customer</string>
    <string name="Cart">Cart</string>
</resources>
