<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/Home"
            android:icon="@drawable/home"
            />
        <item
            android:id="@+id/product"
            android:title="@string/Product"
            android:icon="@drawable/product"
            />
        <item
            android:id="@+id/order"
            android:title="@string/Order"
            android:icon="@drawable/order"/>



    </group>

    <item android:title="Profile">
        <menu>
            <group
                android:checkableBehavior="single">

                <item
                    android:id="@+id/cart"
                    android:title="Cart"
                    android:icon="@drawable/ic_cart"
                    />

                <item
                    android:id="@+id/profile"
                    android:title="@string/Profile"
                    android:icon="@drawable/proifle"
                    />

                <item
                    android:id="@+id/logout"
                    android:title="@string/Logout"
                    android:icon="@drawable/logout"
                    />

            </group>
        </menu>

    </item>
</menu>